# vrbdecode_v3

./: .gitignore  AGENT_IMPLEMENTATION_GUIDE.md  Cargo.toml  OUTLINE_ICBC_8P.md  OUTLINE_ICTEXPRESS_6P.md  PROJECT_FILES_MAP.md  README.md  Up_Next.md  VRBDecode_Executive_Summary_v2.md  VRBDecode_ICBC_Research_Plan_v2.md  VRBDecode_ICTExpress_Research_Plan_v2.md  ci.ps1  ci.sh  requirements.txt
.cargo/: config.toml
.github/workflows/: run-decider.yml  run-ict-express.yml
eval/: plot_ict_express.py  run_icbc.py  run_ict_express.py  run_table1.py
paper/icbc_short/: main.tex  refs.bib
paper/ict_express/: generate_figures.py  generate_table1_tex.py  main.aux  main.bbl  main.blg  main.out  main.tex  peer_review.md  refs.bib  table1.tex
ref/python/: decoding_ref.py  generate_vectors.py
spec/: DecodingSpec_v1.md  PublicInputsSpec_v1.md  ReceiptSpec_v1.md
tests/: test_decoding_spec_v1.py
vectors/: golden.jsonl  random.jsonl
vrbdecode-core/: Cargo.toml
vrbdecode-core/src/: decoding.rs  lib.rs
vrbdecode-core/tests/: vectors_equivalence.rs
vrbdecode-zk/: Cargo.toml
vrbdecode-zk/src/: lib.rs  receipt_fcircuit.rs  step_circuit.rs
vrbdecode-zk/tests/: groth16_smoke.rs  r1cs_vectors.rs  sonobe_nova_receipt_ivc.rs  sonobe_nova_step_ivc.rs
