[workspace]
members = ["vrbdecode-core", "vrbdecode-zk"]
resolver = "2"

[patch.crates-io]
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", rev = "b3b4a15" }

ark-ff = { git = "https://github.com/arkworks-rs/algebra" }
ark-ec = { git = "https://github.com/arkworks-rs/algebra" }
ark-serialize = { git = "https://github.com/arkworks-rs/algebra" }
ark-poly = { git = "https://github.com/arkworks-rs/algebra" }
ark-relations = { git = "https://github.com/arkworks-rs/snark" }
ark-snark = { git = "https://github.com/arkworks-rs/snark" }
ark-crypto-primitives = { git = "https://github.com/flyingnobita/crypto-primitives", rev = "f559264" }
ark-r1cs-std = { git = "https://github.com/flyingnobita/r1cs-std_yelhousni", rev = "b4bab0c" }
ark-std = { git = "https://github.com/arkworks-rs/std" }
ark-poly-commit = { git = "https://github.com/arkworks-rs/poly-commit" }

ark-bn254 = { git = "https://github.com/arkworks-rs/algebra" }
ark-grumpkin = { git = "https://github.com/arkworks-rs/algebra" }
ark-pallas = { git = "https://github.com/arkworks-rs/algebra" }
ark-vesta = { git = "https://github.com/arkworks-rs/algebra" }
ark-mnt4-298 = { git = "https://github.com/arkworks-rs/algebra" }
ark-mnt6-298 = { git = "https://github.com/arkworks-rs/algebra" }

[patch."https://github.com/arkworks-rs/circom-compat"]
ark-circom = { git = "https://github.com/dmpierre/circom-compat", rev = "0dfd773c" }
