[package]
name = "vrbdecode-zk"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bn254 = "0.5"
ark-ff = "0.5"
ark-std = "0.5"
ark-relations = "0.5"
ark-r1cs-std = "0.5"
ark-groth16 = "0.5"
ark-crypto-primitives = { version = "0.5", features = ["sponge", "constraints", "crh"] }
ark-serialize = "0.5"
ark-grumpkin = "0.5"
folding-schemes = { git = "https://github.com/privacy-scaling-explorations/sonobe" }
solidity-verifiers = { git = "https://github.com/privacy-scaling-explorations/sonobe", package = "solidity-verifiers" }
vrbdecode-core = { path = "../vrbdecode-core" }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]

[[bin]]
name = "bench_step"
path = "src/bin/bench_step.rs"

[[bin]]
name = "bench_nova"
path = "src/bin/bench_nova.rs"

[[bin]]
name = "decider_evm"
path = "src/bin/decider_evm.rs"
